# vsql-uuid

./: .gitignore  AGENTS.local.md  AGENTS.md  CMakeLists.txt  LICENSE  README.md  manifest.json
.github/workflows/: ci.yml  cla.yml
cmake/: FindVillageSQL.cmake
mysql-test/r/: uuid_compare.result
mysql-test/t/: uuid_basic.test  uuid_type.test
src/: uuid.cc
test/r/: uuid_basic.result  uuid_compare.result  uuid_conversion.result  uuid_type.result
test/t/: uuid_basic.test  uuid_compare.test  uuid_conversion.test  uuid_type.test
